--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -11,54 +10,59 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Frontend Mentor | Four card feature section</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    <h1>
-      Reliable, efficient delivery
-      <span> Powered by Technology </span>
-    </h1>
-    <p>
-      Our Artificial Intelligence powered tools use millions of project data
-      points to ensure that your project is successful
-    </p>
-    <div class="content">
-      <h2>Supervisor</h2>
-      <p>Monitors activity to identify project roadblocks</p>
-    </div>
-    <div class="content">
-      <h3>Team Builder</h3>
+    <header>
+      <h1>
+        Reliable, efficient delivery
+        <span>Powered by Technology</span>
+      </h1>
+
       <p>
-        Scans our talent network to create the optimal team for your project
+        Our Artificial Intelligence powered tools use millions of project data
+        points to ensure that your project is successful
       </p>
-    </div>
-    <div class="content">
-      <h4>Karma</h4>
-      <p>Regularly evaluates our talent to ensure quality</p>
-    </div>
-    <div class="content">
-      <h5>Calculator</h5>
-      <p>Uses data from past projects to provide better delivery estimates</p>
-    </div>
+    </header>
+
+    <main>
+      <div class="card supervisor">
+        <h2>Supervisor</h2>
+        <p>Monitors activity to identify project roadblocks</p>
+        <img src="./images/icon-supervisor.svg" alt="" />
+      </div>
+      <div class="middle">
+        <div class="card team-builder">
+          <h2>Team Builder</h2>
+          <p>
+            Scans our talent network to create the optimal team for your project
+          </p>
+          <img src="./images/icon-team-builder.svg" alt="" />
+        </div>
+        <div class="card karma">
+          <h2>Karma</h2>
+          <p>Regularly evaluates our talent to ensure quality</p>
+          <img src="./images/icon-karma.svg" alt="" />
+        </div>
+      </div>
+      <div class="card calculator">
+        <h2>Calculator</h2>
+        <p>Uses data from past projects to provide better delivery estimates</p>
+        <img src="./images/icon-calculator.svg" alt="" />
+      </div>
+    </main>
 
     <footer>
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by
+        <a href="https://github.com/MilliDGemini/four-card-feature-"
+          >Milli D Gemini</a
+        >.
       </p>
     </footer>
   </body>
